--- a/index.html
+++ b/index.html
@@ -5,58 +5,73 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400;700;900&display=swap" rel="stylesheet">
 </head>
-<header>
-    <h1> the code review</h1>
-</header>
 <body>
+    <header>
+        <h1> the code review</h1>
+    </header>
+
     <section class="top">
         <h2>Signup for our newsletter</h2>
         <p>Get the latest news on how your code is doing right in your inbox</p>
     </section>
-    <section>
+    <section class="form">
         <form action="#" method="get">
             <fieldset class="contact_info">
                 <legend>contact information</legend>
-                <label for="full_name">Full Name</label>
-                <input type="text" id="full_name" name="fullName" value="fullName" placeholder="required">
-                <label for="email_address">Email Address</label>
-                <input type="email" id="email_address" name="emailAddress" value="emailAddress" placeholder="required">
-                <label for="phone_number">phone number</label>
-                <input type="telephone" id="phone_number" name="phoneNumber" value="phoneNumber">
-                <label for="street_address">street address</label>
-                <input type="text" id="street_address" name="streetAddress" value="streetAddress">
-                <label for="city">city</label>
-                <input type="text" id="city" name="city" value="city">
-                <label for="state">state</label>
-                <select id="state" name="state">`
-                    <option value="">Choose State</option>
-                    <option value="California">California</option>
-                    <option value="new york">New York</option>
-                </select>
-                <label for="zip_code">zip code</label>
-                <input type="number" id="zip_code" name="zipCode" value="zipCode">
+                <div class=contact_field>
+                    <label for="full_name">Full Name</label>
+                    <input type="text" id="full_name" name="fullName" value="fullName" placeholder="required">
+                </div>
+                <div class=contact_field>
+                    <label for="email_address">Email Address</label>
+                    <input type="email" id="email_address" name="emailAddress" value="emailAddress" placeholder="required">
+                </div>
+                <div class=contact_field>
+                    <label for="phone_number">phone number</label>
+                    <input type="telephone" id="phone_number" name="phoneNumber" value="phoneNumber">
+                </div>
+                <div class=contact_field>
+                    <label for="street_address">street address</label>
+                    <input type="text" id="street_address" name="streetAddress" value="streetAddress">
+                </div>
+                <div class=contact_field>
+                    <label for="city">city</label>
+                    <input type="text" id="city" name="city" value="city">
+                </div>
+                <div class=contact_field>
+                    <label for="state">state</label>
+                    <select id="state" name="state">`
+                        <option value="">Choose State</option>
+                        <option value="California">California</option>
+                        <option value="new york">New York</option>
+                    </select>
+                </div>
+                <div class="contact_field">
+                    <label for="zip_code">zip code</label>
+                    <input type="number" id="zip_code" name="zipCode" value="zipCode">
+                </div>
             </fieldset>
             <fieldset>
                 <legend>newsletter</legend>
                 <p>select the newsletters you would like to receive</p>
-                <div>
+                <div class=newsletter_field>
                     <input type="checkbox" id="html_news" name="htmlNews" value="htmlChecked" checked>
                     <label for="html_news">HTML News</label>
                 </div>
-                <div>
+                <div class=newsletter_field>
                     <input type="checkbox" id="css_news" name="cssNews"  value="cssChecked">
                     <label for="css_news">CSS News</label>
                 </div>
-                <div>
+                <div class=newsletter_field>
                     <input type="checkbox" id="javascript_news" name="javascriptNews"  value="javascriptChecked">
                     <label for="javascript_news">Javascript News</label>
                 </div>
                 <p>newsletter format</p>
-                <div>
+                <div class=newsletter_field>
                     <input type="radio" id="html" name="radio_html" value="html">
                     <label for="html">HTML</label>
                 </div>
-                <div>
+                <div class=newsletter_field>
                     <input type="radio" id="plain_text" name="radio_plainText" value="plainText">
                     <label for="plain_text">Plain Text</label>
                 </div>
