--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
                     <legend>contact information</legend>
                     <div class=contact_field>
                         <label for="full_name">Full Name</label>
-                        <input type="text" id="full_name" name="fullName" value="fullName" placeholder="required" required>
+                        <input type="text" id="full_name" name="fullName" placeholder="required" required>
                     </div>
                     <div class=contact_field>
                         <label for="email_address">Email Address</label>
-                        <input type="email" id="email_address" name="emailAddress" value="emailAddress" placeholder="required" required>
+                        <input type="email" id="email_address" name="emailAddress" placeholder="required" required>
                     </div>
                     <div class=contact_field>
                         <label for="phone_number">phone number</label>
