--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                             <option value="new york">New York</option>
                         </select>
                     </div>
-                    <div class="contact_field">
+                    <div class="contact_field zip">
                         <label for="zip_code">zip code</label>
                         <input type="number" id="zip_code" name="zipCode" value="95391" placeholder="zip code">
                     </div>
